# FP808XG6--CollectionBot

./: CMakeLists.txt  Doxyfile  README.md  package.xml
.github/workflows/: run-unit-test-and-upload-codecov.yml
documents/coverage/: index-sort-f.html  index-sort-l.html  index.html
documents/coverage/test/: index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html  test.cpp.func-sort-c.html  test.cpp.func.html  test.cpp.gcov.html
documents/html/: annotated.html  ccs_8cpp.html  ccs_8cpp__incl.map  ccs_8cpp__incl.md5  ccs_8hpp.html  ccs_8hpp__dep__incl.map  ccs_8hpp__dep__incl.md5  ccs_8hpp_source.html  ccs__main_8cpp.html  ccs__main_8cpp__incl.map  ccs__main_8cpp__incl.md5  classCompetitionARIAC-members.html  classCompetitionARIAC.html  classCompetitionARIAC__inherit__graph.map  classCompetitionARIAC__inherit__graph.md5  classCompetitionARIAC__test-members.html  classCompetitionARIAC__test.html  classCompetitionARIAC__test__coll__graph.map  classCompetitionARIAC__test__inherit__graph.md5  classParts-members.html  classParts.html  classParts__inherit__graph.map  classParts__inherit__graph.md5  classes.html  dir_000000_000001.html  dir_000005_000001.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_81025302fd592f43a2d7c4fbb7eea7b8.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fc5fa3bdd5ca282ec1fe991de9012442.html  dir_fec02fa399cf056922e92647fc79bf11.html  files.html  functions.html  functions_func.html  functions_vars.html  (+17 more)
documents/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
documents/latex/: annotated.tex  ccs_8cpp.tex  ccs_8cpp__incl.md5  ccs_8hpp.tex  ccs_8hpp__dep__incl.md5  ccs__main_8cpp.tex  ccs__main_8cpp__incl.md5  classCompetitionARIAC.tex  classCompetitionARIAC__coll__graph.md5  classCompetitionARIAC__test.tex  classCompetitionARIAC__test__inherit__graph.md5  classParts.tex  classParts__inherit__graph.md5  files.tex  hierarchy.tex  main_8cpp.tex  main_8cpp__incl.md5  md_README.tex  refman.tex
include/ariac_collection_bot/: ccs.hpp
include/collection_bot/: ccs.hpp
launch/: ccs.launch.py
results/: cppcheck.txt  cpplint.txt
scripts/: generate_coverage_report.bash
src/: ccs.cpp  ccs_main.cpp
test/: CMakeLists.txt  main.cpp  test.cpp
