<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>ariac_collection_bot</name>
	<version>0.0.0</version>
	<description>The ARIAC CCS (Competitor Control System) package is responsible for communicating with the competition environment and executing the tasks.</description>
	<maintainer email="kpatil27@umd.edu">Kiran S Patil</maintainer>
	<maintainer email="vyachu07@umd.edu">Vyshnv Achuthan</maintainer>
	<maintainer email="braghuna@umd.edu">Surya Chappidi</maintainer>
	<license>TODO: License declaration</license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	

	<depend>rclcpp</depend>
	<depend>ariac_msgs</depend>		
	<depend>std_srvs</depend>		

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
